--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,69 @@
+# Environment variables
 *.env
 **.env
-*.json
-*.csv
+.env.local
+.env.development
+.env.production
+
+# API Keys and secrets
+config.json
+secrets.json
+api_keys.txt
+
+# Data files (optional - uncomment if you don't want to track data)
+# *.json
+# *.csv
+
+# Python
+__pycache__/
+*.py[cod]
+*$py.class
+*.so
+.Python
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+*.egg-info/
+.installed.cfg
+*.egg
+MANIFEST
+
+# Virtual environments
+venv/
+env/
+ENV/
+env.bak/
+venv.bak/
+
+# IDE
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+
+# OS
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
+# Logs
+*.log
+logs/
+
+# Temporary files
+*.tmp
+*.temp
